[package]
name = "go-flag"
version = "0.1.1-alpha.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

description = "Command line parser library, made to be compatible with Go's flag"
repository = "https://github.com/qnighy/go-flag.rs"
readme = "README.md"
keywords = ["cli", "parser", "golang"]
categories = ["command-line-interface", "parser-implementations"]
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "0.1.9"

[badges]
is-it-maintained-issue-resolution = { repository = "qnighy/go-flag.rs" }
is-it-maintained-open-issues = { repository = "qnighy/go-flag.rs" }
